import HttpClientModule into app.module.ts and make get request for input movie (console.log(res)

--- a/src/pages/search-movies/search-movies.html
+++ b/src/pages/search-movies/search-movies.html
@@ -14,5 +14,8 @@
 
 
 <ion-content padding>
-
+  <form>
+    <input id="movie" type="text" name="movie">
+    <button (click)="findMovie($event)">Find Movie1</button>
+  </form>
 </ion-content>
