implement sidebar functionality

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,11 +1,14 @@
+
 <ion-header>
   <ion-navbar>
-    <ion-title>
-      Top Movies
-    </ion-title>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title>Home</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
+  A place to find and save your favourite movies!
   <button (click)="logIn()">Log In</button>
 </ion-content>
