--- a/src/pages/search-movies/search-movies.html
+++ b/src/pages/search-movies/search-movies.html
@@ -4,14 +4,15 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
+
 <ion-header>
-
   <ion-navbar>
-    <ion-title>Find a Movie</ion-title>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title>Search</ion-title>
   </ion-navbar>
-
 </ion-header>
-
 
 <ion-content padding>
   <form>
