selecting favourites page makes get request to rails api to pull all movies and render them

--- a/src/pages/favourites/favourites.html
+++ b/src/pages/favourites/favourites.html
@@ -15,5 +15,9 @@
 
 
 <ion-content padding>
-
+  <div *ngFor="let movie of favouritesData">
+    <p>{{ movie.title }}</p>
+    <p>{{ movie.overview }}</p>
+    <img src="http://image.tmdb.org/t/p/w185{{ movie.poster_path }}">
+  </div>
 </ion-content>
