--- a/src/pages/favourites/favourites.html
+++ b/src/pages/favourites/favourites.html
@@ -9,13 +9,13 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Favourites</ion-title>
+    <ion-title >Favourites</ion-title>
   </ion-navbar>
 </ion-header>
 
 
 <ion-content padding>
-  <div *ngFor="let movie of favouritesData">
+  <div text-center *ngFor="let movie of favouritesData">
     <p>{{ movie.title }}</p>
     <p>{{ movie.overview }}</p>
     <img src="http://image.tmdb.org/t/p/w185{{ movie.poster_path }}">
