--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -12,12 +12,10 @@
   A place to find and save your favourite movies!
   <form (ngSubmit)="logForm()">
     <ion-item>
-      <ion-label>Email</ion-label>
-      <ion-input type="email" [(ngModel)]="user.email" name="email"></ion-input>
+      <ion-input placeholder="Email" type="email" [(ngModel)]="user.email" name="email"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-label>Password</ion-label>
-      <ion-input type="password" [(ngModel)]="user.password" name="password"></ion-input>
+      <ion-input placeholder="Password" type="password" [(ngModel)]="user.password" name="password"></ion-input>
     </ion-item>
     <button ion-button type="submit" block>Log in</button>
   </form>
